--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>handlebars</artifactId>
             <version>${version.handlebars}</version>
         </dependency>
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>${version.freemarker}</version>
+        </dependency>
     </dependencies>
 
     <properties>
@@ -25,6 +30,7 @@
         <failOnMissingWebXml>false</failOnMissingWebXml>
         <version.wildfly.maven.plugin>1.0.2.Final</version.wildfly.maven.plugin>
         <version.handlebars>4.0.6</version.handlebars>
+        <version.freemarker>2.3.25-incubating</version.freemarker>
     </properties>
 
     <build>
